[feat] Restaurant view complete

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.view.HomeFragment"
+    tools:context=".ui.view.food.HomeFragment"
     android:id="@+id/fragment_home">
 
     <View
