--- a/app/src/main/res/navigation/myongsik_nav_graph.xml
+++ b/app/src/main/res/navigation/myongsik_nav_graph.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/fragment_splash"
-        android:name="com.myongsik.myongsikandroid.ui.view.SplashFragment"
+        android:name="com.myongsik.myongsikandroid.ui.view.food.SplashFragment"
         android:label="SplashFragment"
         tools:layout="@layout/fragment_splash">
         <action
@@ -20,7 +20,7 @@
     </fragment>
     <fragment
         android:id="@+id/fragment_home"
-        android:name="com.myongsik.myongsikandroid.ui.view.HomeFragment"
+        android:name="com.myongsik.myongsikandroid.ui.view.food.HomeFragment"
         android:label="HomeFragment"
         tools:layout="@layout/fragment_home">
         <action
@@ -30,31 +30,46 @@
     </fragment>
     <fragment
         android:id="@+id/fragment_week_foods"
-        android:name="com.myongsik.myongsikandroid.ui.view.WeekFoodsFragment"
+        android:name="com.myongsik.myongsikandroid.ui.view.food.WeekFoodsFragment"
         android:label="WeekFoodsFragment"
         tools:layout="@layout/fragment_week_foods"/>
     <fragment
         android:id="@+id/fragment_love"
-        android:name="com.myongsik.myongsikandroid.ui.view.LoveFragment"
+        android:name="com.myongsik.myongsikandroid.ui.view.search.LoveFragment"
         android:label="fragment_love"
         tools:layout="@layout/fragment_love" />
     <fragment
         android:id="@+id/fragment_search"
-        android:name="com.myongsik.myongsikandroid.ui.view.SearchFragment"
+        android:name="com.myongsik.myongsikandroid.ui.view.search.SearchFragment"
         android:label="fragment_search"
         tools:layout="@layout/fragment_search" >
         <action
             android:id="@+id/action_fragment_search_to_tagFragment"
             app:destination="@id/fragment_tag"
             app:popUpTo="@id/fragment_search" />
+        <action
+            android:id="@+id/action_fragment_search_to_restaurantFragment"
+            app:destination="@id/fragment_restaurant" />
     </fragment>
     <fragment
         android:id="@+id/fragment_tag"
-        android:name="com.myongsik.myongsikandroid.ui.view.TagFragment"
+        android:name="com.myongsik.myongsikandroid.ui.view.search.TagFragment"
         android:label="TagFragment"
         tools:layout="@layout/fragment_tag">
         <argument
             android:name="tag"
             app:argType="string" />
+        <action
+            android:id="@+id/action_fragment_tag_to_fragment_restaurant"
+            app:destination="@id/fragment_restaurant" />
+    </fragment>
+    <fragment
+        android:id="@+id/fragment_restaurant"
+        android:name="com.myongsik.myongsikandroid.ui.view.search.RestaurantFragment"
+        android:label="RestaurantFragment"
+        tools:layout="@layout/fragment_restaurant">
+        <argument
+            android:name="restaurant"
+            app:argType="com.myongsik.myongsikandroid.data.model.kakao.Restaurant" />
     </fragment>
 </navigation>
