--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -19,17 +19,42 @@
         android:id="@+id/search_back_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         android:src="@drawable/ic_ep_arrow_left"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="12dp"/>
 
+    <TextView
+        android:id="@+id/search_top_tv"
+        android:text="명지맛집"
+        android:textColor="@color/white"
+        android:fontFamily="@font/notosans_regular"
+        android:textFontWeight="700"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/search_top_v"
+        android:layout_marginLeft="15dp"
+        android:textSize="24sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
+        android:id="@+id/search_ic_iv"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:src="@drawable/ic_search"
+        app:layout_constraintBottom_toBottomOf="@id/search_top_v"
+        android:layout_marginRight="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/tl_search"
         android:background="@drawable/search_food_stroke"
         android:hint="명지맛집을 검색 하세요."
+        android:visibility="invisible"
         android:textSize="13sp"
         android:paddingLeft="15dp"
         android:layout_width="0dp"
