--- a/app/src/main/res/navigation/myongsik_nav_graph.xml
+++ b/app/src/main/res/navigation/myongsik_nav_graph.xml
@@ -26,6 +26,10 @@
         <action
             android:id="@+id/action_fragment_home_to_weekFoodsFragment"
             app:destination="@id/fragment_week_foods"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
             app:popUpTo="@id/fragment_home" />
         <action
             android:id="@+id/action_fragment_home_to_fragment_search"
@@ -43,7 +47,11 @@
         tools:layout="@layout/fragment_love" >
         <action
             android:id="@+id/action_fragment_love_to_fragment_restaurant"
-            app:destination="@id/fragment_restaurant" />
+            app:destination="@id/fragment_restaurant"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
         <action
             android:id="@+id/action_fragment_love_to_fragment_search"
             app:destination="@id/fragment_search" />
@@ -56,10 +64,18 @@
         <action
             android:id="@+id/action_fragment_search_to_tagFragment"
             app:destination="@id/fragment_tag"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
             app:popUpTo="@id/fragment_search" />
         <action
             android:id="@+id/action_fragment_search_to_restaurantFragment"
-            app:destination="@id/fragment_restaurant" />
+            app:destination="@id/fragment_restaurant"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/fragment_tag"
@@ -71,7 +87,11 @@
             app:argType="string" />
         <action
             android:id="@+id/action_fragment_tag_to_fragment_restaurant"
-            app:destination="@id/fragment_restaurant" />
+            app:destination="@id/fragment_restaurant"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/fragment_restaurant"
