--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -70,7 +70,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:src="@drawable/ic_search"
         app:layout_constraintBottom_toBottomOf="@id/search_top_v"
-        android:layout_marginRight="15dp"
+        android:layout_marginRight="22dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -202,6 +202,29 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/item_search_hashtag4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/search_hashtag"
+                >
+
+                <TextView
+                    android:id="@+id/week_food_afternoon_tv3"
+                    android:text="#명지빵집"
+                    android:textColor="#000000"
+                    android:paddingVertical="4dp"
+                    android:textSize="18sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:paddingHorizontal="11dp"
+                    />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         </LinearLayout>
 
 
@@ -209,7 +232,7 @@
 
     <TextView
         android:id="@+id/good_place_myongji"
-        android:text="#명지대에서 \n 가장 가기 좋은 곳은..."
+        android:text="#명식이가 준비했습니다!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
