--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,17 +49,17 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_today_search_result"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scrollbars="vertical"
-        app:layout_constraintBottom_toTopOf="@id/bt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/home_today_food_tv"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
         />
 
 
@@ -107,21 +107,22 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/bt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="주간 식단 확인하러 가기"
-        android:fontFamily="@font/notosans_regular"
-        android:textSize="14sp"
-        android:background="@drawable/home_food_button"
-        android:paddingVertical="6dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginHorizontal="69dp"
-        android:layout_marginBottom="20dp"
-        />
+<!--    <androidx.appcompat.widget.AppCompatButton-->
+<!--        android:id="@+id/bt"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="주간 식단 확인하러 가기"-->
+<!--        android:fontFamily="@font/notosans_regular"-->
+<!--        android:textSize="14sp"-->
+<!--        android:background="@drawable/home_food_button"-->
+<!--        android:paddingVertical="6dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        android:layout_marginHorizontal="69dp"-->
+<!--        android:layout_marginBottom="20dp"-->
+<!--        />-->
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
