--- a/app/src/main/res/layout/item_restaurant_food.xml
+++ b/app/src/main/res/layout/item_restaurant_food.xml
@@ -118,9 +118,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginRight="5dp"
+        android:layout_marginRight="14dp"
+        android:layout_marginBottom="8dp"
         android:src="@drawable/ic_food_detail_arrow"/>
 
     <TextView
@@ -130,8 +130,8 @@
         android:text="바로 가기"
         android:textColor="@color/main_color"
         app:layout_constraintRight_toLeftOf="@id/item_food_detail_iv"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/item_food_detail_iv"
+        app:layout_constraintTop_toTopOf="@id/item_food_detail_iv"
         />
 
 
