--- a/app/src/main/res/layout/item_restaurant_food.xml
+++ b/app/src/main/res/layout/item_restaurant_food.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/home_food_stroke"
-    android:layout_marginHorizontal="17dp">
+    android:layout_marginHorizontal="10dp">
 
     <TextView
         android:id="@+id/item_food_name"
@@ -17,8 +18,19 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:textColor="#000000"
         android:textSize="16sp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="13dp"
         />
+
+    <ImageView
+        android:id="@+id/item_food_ellipse_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_restaurant_ellipse"
+        app:layout_constraintTop_toTopOf="@id/item_food_name"
+        app:layout_constraintBottom_toBottomOf="@id/item_food_name"
+        app:layout_constraintLeft_toRightOf="@id/item_food_name"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="0dp"/>
 
     <TextView
         android:id="@+id/item_food_object"
@@ -26,37 +38,36 @@
         android:textSize="12sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/item_food_name"
-        app:layout_constraintBottom_toBottomOf="@id/item_food_name"
-        app:layout_constraintLeft_toRightOf="@id/item_food_name"
+        app:layout_constraintTop_toTopOf="@id/item_food_ellipse_iv"
+        app:layout_constraintBottom_toBottomOf="@id/item_food_ellipse_iv"
+        app:layout_constraintLeft_toRightOf="@id/item_food_ellipse_iv"
         android:layout_marginLeft="5dp"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/item_food_blue_cl"
+    <TextView
+        android:id="@+id/week_food_afternoon_tv"
+        android:text="320m"
+        android:fontFamily="@font/notosans_regular"
+        android:textColor="@color/main_color"
+        android:textSize="10sp"
+        android:textFontWeight="700"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/week_food_layout"
         app:layout_constraintTop_toTopOf="@id/item_food_object"
         app:layout_constraintBottom_toBottomOf="@id/item_food_object"
         app:layout_constraintLeft_toRightOf="@id/item_food_object"
         android:layout_marginLeft="5dp"
-        >
+        />
 
-        <TextView
-            android:id="@+id/week_food_afternoon_tv"
-            android:text="320m"
-            android:textColor="@color/white"
-            android:paddingVertical="4dp"
-            android:textSize="10sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:paddingHorizontal="11dp"
-            />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/item_food_love_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_food_love"
+        app:layout_constraintTop_toTopOf="@id/week_food_afternoon_tv"
+        app:layout_constraintBottom_toBottomOf="@id/week_food_afternoon_tv"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="13dp"
+        />
 
     <ImageView
         android:id="@+id/item_food_location_iv"
@@ -113,26 +124,42 @@
     <!--        app:layout_constraintTop_toTopOf="parent"-->
     <!--        android:layout_marginRight="-40dp"/>-->
 
-    <ImageView
-        android:id="@+id/item_food_detail_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginRight="5dp"
-        android:src="@drawable/ic_food_detail_arrow"/>
 
-    <TextView
-        android:id="@+id/item_food_detail_tv"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/item_food_detail_cl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="바로 가기"
-        android:textColor="@color/main_color"
-        app:layout_constraintRight_toLeftOf="@id/item_food_detail_iv"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+        android:background="@drawable/week_food_layout"
+        app:layout_constraintBottom_toBottomOf="@+id/item_food_phone_tv"
+        app:layout_constraintEnd_toEndOf="@+id/item_food_love_iv"
+        app:layout_constraintTop_toTopOf="@+id/item_food_phone_tv">
+
+        <TextView
+            android:id="@+id/item_food_detail_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingVertical="5dp"
+            android:paddingLeft="11dp"
+            android:paddingRight="20dp"
+            android:text="바로 가기"
+            android:textColor="@color/white"
+            android:textSize="13sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/item_food_detail_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/ic_food_detail_arrow"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
